# MarbleGame

./: CMakeLists.txt  camera_component.hpp  common.hpp  component.hpp  entity.hpp  instance_data.hpp  main.cpp  material.hpp  mesh_component.hpp  platform_component.hpp  transform_component.hpp  vertex.hpp
shaders/: common.slang  main.slang
